[package]
name = "WWPatch"
version = "1.1.0"
edition = "2021"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
libloading = "0.8.3"
windows = { version = "0.54.0", features = [
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
winapi = { version = "0.3.9", features = [
    "winuser",
] }
minhook-sys = "0.1.1"
windows-sys = "0.52.0"

[build-dependencies]
cc = "1.0.90"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimization level 3.
codegen-units = 1 # Maximum size reduction optimizations.
